--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,12 +3,11 @@
     <style name="Base.Theme.WalletWizard" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="actionBarStyle">@color/primary_800</item>
+
+        <item name="colorPrimary">@color/primary_900</item>
+        <item name="colorPrimaryDark">@color/primary_700</item>
     </style>
 
-    <style name="Theme.WalletWizard" parent="Base.Theme.WalletWizard" />
-
-    <style name="ThemeOverlay.WalletWizard.FullscreenContainer" parent="">
-        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
-        <item name="fullscreenTextColor">@color/light_blue_A200</item>
-    </style>
 </resources>
