--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -17,7 +17,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:src="@drawable/locate_me"
-        android:contentDescription="locate me" />
+        android:contentDescription="locate me"
+        android:background="@color/primary_900"
+        />
 
 
 </RelativeLayout>
