--- a/app/src/main/res/layout/component_header.xml
+++ b/app/src/main/res/layout/component_header.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-    android:background="@color/primary_200"
+    android:background="@color/primary_600"
     >
 
     <TextView
@@ -14,6 +14,7 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:text="@string/app_name"
-        />
+        android:textColor="@color/primary_50"
+    />
 
 </RelativeLayout>
