--- a/app/src/main/res/layout/fragment_convert.xml
+++ b/app/src/main/res/layout/fragment_convert.xml
@@ -40,7 +40,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/price_after_exchange"
         android:layout_below="@+id/input_price"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/exchange_rate"
+        android:layout_below="@+id/price_after_exchange"/>
 
 </RelativeLayout>
 
