--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    >
 
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="602dp"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
     />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -19,7 +22,7 @@
         android:src="@drawable/locate_me"
         android:contentDescription="locate me"
         android:background="@color/primary_900"
-        />
+    />
 
 
 </RelativeLayout>
