--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,55 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
+    android:layout_height="wrap_content"
     >
 
     <RelativeLayout
-        android:id="@+id/entityLayout"
+        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-    >
+        android:padding="16dp"
+        >
 
-        <Spinner
-            android:id="@+id/entitySpinner"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/entityLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"
-        />
+            >
 
-        <GridLayout
-            android:id="@+id/checkBoxLayout"
-            android:paddingTop="10dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/entitySpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:columnCount="4"
-            android:orientation="horizontal">
-        </GridLayout>
+            <Spinner
+                android:id="@+id/entitySpinner"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentTop="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                />
+
+            <GridLayout
+                android:id="@+id/checkBoxLayout"
+                android:paddingTop="10dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/entitySpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:columnCount="4"
+                android:orientation="horizontal">
+            </GridLayout>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/chartLayout"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_below="@+id/entityLayout">
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/idBarChart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+        </LinearLayout>
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/chartLayout"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_below="@+id/entityLayout">
-
-        <!-- Ui component for our bar chart -->
-        <com.github.mikephil.charting.charts.BarChart
-            android:id="@+id/idBarChart"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-        />
-    </LinearLayout>
-
-</RelativeLayout>
+</ScrollView>
