--- a/app/src/main/res/layout/fragment_convert.xml
+++ b/app/src/main/res/layout/fragment_convert.xml
@@ -24,24 +24,19 @@
 
 
     </LinearLayout>
-    <com.google.android.material.textfield.TextInputLayout
+    <EditText
+        android:id="@+id/input_edit_price"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/input_price"
-        android:layout_below="@+id/layout_select_currencies">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/input_edit_price"
-            android:inputType="numberDecimal"
-            android:hint="1" />
-    </com.google.android.material.textfield.TextInputLayout>
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:layout_below="@+id/layout_select_currencies"
+        android:hint="Enter price"
+        android:autofillHints="Enter price2" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/price_after_exchange"
-        android:layout_below="@+id/input_price"/>
+        android:layout_below="@+id/input_edit_price"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
