--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="secondary">#000</color>
+    <color name="dark">#000</color>
+    <color name="transparent">#00FFFFFF</color>
 
     <color name="primary_50">#fef2f4</color>
     <color name="primary_100">#fde6e9</color>
