Refine the entire app and optimized loading time

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,13 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="16dp"
     >
 
-    <RelativeLayout
-        android:id="@+id/main"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/entityLayout"
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
-                />
+            />
 
             <GridLayout
                 android:id="@+id/checkBoxLayout"
@@ -54,6 +54,16 @@
             />
         </LinearLayout>
 
-    </RelativeLayout>
+        <Button
+            android:id="@+id/credits_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Access credits page"
+            android:layout_marginTop="8dp"
+        />
+
+    </LinearLayout>
+
+
 
 </ScrollView>
