--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -1,49 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".Fragments.ConverterFragment">
 
-    <LinearLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/layout_select_currencies"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:padding="16dp">
 
-        <Spinner
-            android:id="@+id/spinner_from_currency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <RelativeLayout
+            android:id="@+id/converter_hero"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <Spinner
-            android:id="@+id/spinner_to_currency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/converter_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/dark"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:text="@string/converter_page_title"
+                android:textSize="35sp"
+            />
 
+            <TextView
+                android:id="@+id/converter_description"
+                android:layout_below="@+id/converter_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/dark"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"
+                android:text="@string/converter_page_description"
+            />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/converter_after_description"
+                android:layout_below="@+id/converter_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/dark"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:text="@string/converter_page_after_description"
+            />
 
-    <EditText
-        android:id="@+id/input_edit_price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:layout_below="@+id/layout_select_currencies"
-        android:hint="Enter price"
-        android:autofillHints="Enter price2" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/price_after_exchange"
-        android:layout_below="@+id/input_edit_price"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/exchange_rate"
-        android:layout_below="@+id/price_after_exchange"/>
+        </RelativeLayout>
 
-</RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/converter_layout_feature"
+            android:layout_below="@+id/converter_hero"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            >
 
+            <LinearLayout
+                android:id="@+id/layout_select_currencies"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <Spinner
+                    android:id="@+id/spinner_from_currency"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp"
+                />
+
+                <Spinner
+                    android:id="@+id/spinner_to_currency"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp"
+                />
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/input_edit_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/layout_select_currencies"
+                android:autofillHints="Enter price2"
+                android:hint="@string/converter_page_input_placeholder"
+                android:inputType="numberDecimal"
+                android:padding="15dp"
+                android:textColor="@color/dark"
+                android:textColorHint="#546E7A"
+            />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/price_after_exchange"
+                android:layout_below="@+id/input_edit_price"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/exchange_rate"
+                android:layout_below="@+id/price_after_exchange"/>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+</ScrollView>
 
