--- a/app/src/main/res/drawable/background_footer.xml
+++ b/app/src/main/res/drawable/background_footer.xml
@@ -1,12 +1,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#25000000" /> <!-- Set your background color -->
+            <solid android:color="#25000000" />
         </shape>
     </item>
     <item android:top="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_900" /> <!-- Set shadow color -->
+            <solid android:color="@color/primary_900" />
         </shape>
     </item>
 </layer-list>
