--- a/app/src/main/res/layout/fragment_credits.xml
+++ b/app/src/main/res/layout/fragment_credits.xml
@@ -30,6 +30,14 @@
                 android:text="@string/credits_page_title"
             />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/credits_page_app_text_images_description"
+                android:textSize="16sp"
+                android:layout_marginBottom="16dp"
+            />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -56,7 +64,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/app_creator_two"
                     android:textSize="16sp"
-                    android:layout_marginBottom="8dp"/>
+                    android:layout_marginBottom="16dp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -70,7 +78,6 @@
                     android:text="@string/credits_page_api"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp"/>
 
                 <TextView
@@ -85,7 +92,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/credits_page_api_two"
                     android:textSize="16sp"
-                    android:layout_marginBottom="8dp"/>
+                    android:layout_marginBottom="16dp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -109,7 +116,6 @@
                     android:layout_marginBottom="16dp"/>
 
 
-                <!-- Volley -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -125,7 +131,6 @@
                     android:textSize="16sp"
                     android:layout_marginBottom="16dp"/>
 
-                <!-- MapLibre GL Android SDK -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -141,7 +146,6 @@
                     android:textSize="16sp"
                     android:layout_marginBottom="16dp"/>
 
-                <!-- MPAndroidChart -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
