--- a/app/src/main/res/layout/fragment_credits.xml
+++ b/app/src/main/res/layout/fragment_credits.xml
@@ -24,9 +24,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="35sp"
-                android:textStyle="bold"
                 android:gravity="center"
                 android:layout_marginBottom="16dp"
+                android:textColor="@color/dark"
+                android:elevation="4dp"
+                android:shadowColor="#30000000"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:shadowRadius="4"
+                android:textStyle="bold"
                 android:text="@string/credits_page_title"
             />
 
